<resources>
    <string name="app_name">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dev. Gachago</string>
    <string name="nav_header_subtitle">contact.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notifications">Notifications</string>

    <string name="menu_demo">Demo</string>
    <string name="menu_home">Home</string>
    <string name="menu_flex">FlexClub</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_withdraw">Withdraw Funds</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_academy">Flex Academy</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portfolio">Portfolio</string>
    <string name="watchlist">Watchlist</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="edit_profile">Edit Profile</string>


</resources>