<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_demo"
            android:icon="@drawable/demo"
            android:title="@string/menu_demo" />
        <item
            android:id="@+id/nav_flex"
            android:icon="@drawable/flex"
            android:title="@string/menu_flex" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/invite"
            android:title="@string/menu_invite" />
        <item
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/withdraw"
            android:title="@string/menu_withdraw" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_academy"
            android:icon="@drawable/school"
            android:title="@string/menu_academy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />

    </group>
</menu>